--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,15 +24,16 @@
     "clsx": "^1.1.1",
     "create-react-app": "^3.4.1",
     "crypto-browserify": "^3.12.0",
-    "formik": "^2.1.1",
+    "formik": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "notistack": "^0.9.8",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "6",
     "react-scripts": "4.0.1",
+    "routes": "^2.1.0",
     "save-dev": "^0.0.1-security",
     "stream": "^0.0.2",
     "typescript": "^4.8.3",
